# aoc-2021

./: .gitignore  Cargo.toml
benches/: comparisons.rs  optimized.rs  part_comparisons.rs  standard.rs  star_benchmark.rs
src/: lib.rs  main.rs  utils.rs
src/days/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16 copy.rs  day_16.rs  day_17 copy 2.rs  day_17 copy.rs  day_17.rs  day_18.rs  day_19 copy 2.rs  day_19 copy 3.rs  day_19 copy.rs  day_19.rs  day_2.rs  day_20.rs  day_21.rs  day_22 copy 2.rs  day_22 copy 3.rs  day_22 copy.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  mod.rs
src/days_optimized/: day_1.rs  day_15.rs  day_2.rs  mod.rs
src/other/: day_1_original.rs  day_2_original.rs
