[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc_2021"

[[bin]]
name = "aoc_bin"
path = "src/main.rs"

[dependencies]
# rayon = "1.5.3"

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }

[[bench]]
name = "star_benchmark"
harness = false
